Añadir index manual

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -8,29 +9,8 @@
 <body>
     <h1>Políticas de Privacidad</h1>
     <ul>
-        <?php
-        function findIndexFiles($dir) {
-            $files = [];
-            foreach (scandir($dir) as $file) {
-                if ($file === '.' || $file === '..') continue;
-                $fullPath = $dir . '/' . $file;
-                if (is_dir($fullPath)) {
-                    $indexFile = $fullPath . '/index.html';
-                    if (file_exists($indexFile)) {
-                        $files[] = $indexFile;
-                    }
-                }
-            }
-            return $files;
-        }
-
-        $indexFiles = findIndexFiles('.');
-        foreach ($indexFiles as $file) {
-            $relativePath = str_replace('./', '', $file);
-            $dirName = basename(dirname($file));
-            echo "<li><a href=\"$relativePath\">Política de Privacidad - $dirName</a></li>";
-        }
-        ?>
+        <li><a href="Avioncito/index.html">Política de Privacidad - Escape en Avión</a></li>
+        <li><a href="Spity/index.html">Política de Privacidad - Spity</a></li>
     </ul>
 </body>
 </html>
