--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <h1>Políticas de Privacidad</h1>
     <ul>
-        <li><a href="Avioncito/index.html">Política de Privacidad - Escape en Avión</a></li>
-        <li><a href="Spity/index.html">Política de Privacidad - Spity</a></li>
+        <li><a href="Avioncito/Index.html">Política de Privacidad - Escape en Avión</a></li>
+        <li><a href="Spity/Index.html">Política de Privacidad - Spity</a></li>
     </ul>
 </body>
 </html>
